# nutr

./: .gitignore  CMakeLists.txt
include/detectors/: HPGe_Clover_Properties.hh  HPGe_Collection.hh  MOLLY.hh
include/geometry/: NDetectorConstruction.hh
include/geometry/clover_array/70Ge_Kowalewski_LE/: DetectorConstruction.hh
include/geometry/clover_array/array/: CollimatorRoom.hh  LeadShieldingUTR_70Ge_Kowalewski_LE.hh
macros/: init_vis.mac  vis.mac
macros/examples/general_particle_source/: source.mac  source_TUNL122.mac  source_TUNL61.mac  source_TUNL89F.mac  source_gamma.mac
src/detectors/: HPGe_Clover.cc  MOLLY.cc
src/fundamentals/: CMakeLists.txt
src/geometry/: NDetectorConstruction.cc
src/geometry/clover_array/2021-02-16_to_2021-04-10/: DetectorConstruction.cc
src/geometry/clover_array/2021-04-19_to_2021-04-30/: DetectorConstruction.cc
src/geometry/clover_array/2021-05-07_to_2021-05-30/: DetectorConstruction.cc
src/geometry/clover_array/2021-08-23/: DetectorConstruction.cc
src/geometry/clover_array/2021-08-24_to_2021-08-25/: DetectorConstruction.cc
src/geometry/clover_array/2021-08-25_to_2021-08-27/: DetectorConstruction.cc
src/geometry/clover_array/2021-08-28_to_2021-09-09/: DetectorConstruction.cc
src/geometry/clover_array/2021-09-09_to_2021-10-10/: DetectorConstruction.cc
src/geometry/clover_array/2021-11-08_to_2021-11-21/: DetectorConstruction.cc
src/geometry/clover_array/2022-01-21_to_2022-02-05/: DetectorConstruction.cc
src/geometry/clover_array/2022-02-07_to_2022-02-15/: DetectorConstruction.cc
src/geometry/clover_array/2022-02-21_to_2022-03-02/: DetectorConstruction.cc
src/geometry/clover_array/70Ge_Kowalewski_LE/: CMakeLists.txt  DetectorConstruction.cc
src/geometry/clover_array/array/: CMakeLists.txt  LeadShieldingUTR_70Ge_Kowalewski_LE.cc
src/physics/: CMakeLists.txt  Physics.cc
src/sensitive_detector/: CMakeLists.txt
src/sensitive_detector/edep/: TupleManager.cc
src/sensitive_detector/event/: TupleManager.cc
src/sensitive_detector/flux/: TupleManager.cc
src/sensitive_detector/tracker/: TupleManager.cc
